fixed overflow text issue on available page

--- a/client/src/components/ViewAllCard/style.css
+++ b/client/src/components/ViewAllCard/style.css
@@ -28,7 +28,7 @@
     margin-left: -100%;
     opacity: 0;
     position: absolute;
-    width: 300px;
+    width: 100%;
     z-index: 80;
     transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
     transition-delay: 0.25s;
